--- a/ASMDuAn1/src/main/java/com/mycompany/asmduan1/QuanLyDatPhong.form
+++ b/ASMDuAn1/src/main/java/com/mycompany/asmduan1/QuanLyDatPhong.form
@@ -125,32 +125,32 @@
                   <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="txt_MaPhong" alignment="3" min="-2" pref="20" max="-2" attributes="0"/>
+                      <Component id="txt_MaPhong" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="txt_KhachHang" alignment="3" min="-2" pref="20" max="-2" attributes="0"/>
+                      <Component id="txt_KhachHang" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="txt_SoNguoi" alignment="3" min="-2" pref="20" max="-2" attributes="0"/>
+                      <Component id="txt_SoNguoi" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="txt_Gia" alignment="3" min="-2" pref="20" max="-2" attributes="0"/>
+                      <Component id="txt_Gia" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel6" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="txt_NgayDen" alignment="3" min="-2" pref="20" max="-2" attributes="0"/>
+                      <Component id="txt_NgayDen" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel7" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="txt_NgayDi" alignment="3" min="-2" pref="20" max="-2" attributes="0"/>
+                      <Component id="txt_NgayDi" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="72" max="32767" attributes="0"/>
               </Group>
