--- a/ASMDuAn1/src/main/java/com/mycompany/asmduan1/frm_QuanLyNhanVien.form
+++ b/ASMDuAn1/src/main/java/com/mycompany/asmduan1/frm_QuanLyNhanVien.form
@@ -382,6 +382,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Th&#xea;m"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_Th&#xea;mActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btn_LamMoi">
       <Properties>
