--- a/ASMDuAn1/src/main/java/com/mycompany/asmduan1/frm_QuanLyNhanVien.form
+++ b/ASMDuAn1/src/main/java/com/mycompany/asmduan1/frm_QuanLyNhanVien.form
@@ -112,12 +112,10 @@
                   <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
                   <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Component id="txt_TimMaNV" min="-2" pref="173" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
                   <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Component id="txt_TimTenNV" min="-2" pref="181" max="-2" attributes="0"/>
-                  <EmptySpace pref="34" max="32767" attributes="0"/>
+                  <EmptySpace min="-2" pref="68" max="-2" attributes="0"/>
+                  <Component id="txt_TimTenNV" min="-2" pref="344" max="-2" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
                   <Component id="btn_TimKiem" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
@@ -129,7 +127,6 @@
                   <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="txt_TimMaNV" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="txt_TimTenNV" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="btn_TimKiem" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -140,14 +137,12 @@
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JTextField" name="txt_TimMaNV">
-        </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="14" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="M&#xe3; nh&#xe2;n vi&#xea;n"/>
+            <Property name="text" type="java.lang.String" value="M&#xe3; nh&#xe2;n vi&#xea;n    V&#xe0;"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
@@ -164,6 +159,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="T&#xec;m ki&#x1ebf;m"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_TimKiemActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
@@ -205,7 +203,7 @@
                       <Group type="102" attributes="0">
                           <Component id="rdo_Nam" min="-2" pref="51" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="rdo_Nu" min="-2" pref="41" max="-2" attributes="0"/>
+                          <Component id="rdo_Nu" min="-2" pref="55" max="-2" attributes="0"/>
                       </Group>
                       <Component id="jPasswordField1" alignment="0" pref="160" max="32767" attributes="0"/>
                       <Component id="txt_CongViec" alignment="0" max="32767" attributes="0"/>
@@ -334,8 +332,9 @@
         <Component class="javax.swing.JComboBox" name="cbo_ChucVu">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="1">
-                <StringItem index="0" value="Ch&#x1ee9;c v&#x1ee5;"/>
+              <StringArray count="2">
+                <StringItem index="0" value="Qu&#x1ea3;n L&#xfd;"/>
+                <StringItem index="1" value="L&#x1ec5; T&#xe2;n"/>
               </StringArray>
             </Property>
           </Properties>
